changes and some refactoring
